[tool.poetry]
name = "network-analysis"
version = "0.1.0"
description = "Tool for network and security analysis"
authors = ["Craxti <fetis.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
scapy = "^2.4.5"
shodan = "^2.0.0"
virustotal-api = "^0.6.1"
pycensys = "^2.0.0"
securitytrails = "^0.3.3"
passive_dns = "^2.3.0"
dnspython = "^2.2.0"
pycryptodomex = "^3.11.0"
pyopenssl = "^21.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
